# kuka_fri_control

./: .gitignore  README.md  requirements_setup.sh
computer_side/: CMakeLists.txt  README.md  apiserver.hpp  customlbrclient.cpp  customlbrclient.hpp  fri_python.py  gr.py  helper_functions.hpp  jointpositionclient.cpp  jointpositionclient.hpp  kukafricontroller.cpp  kukafricontroller.hpp  main.cpp  main_controller.cpp  main_controller.hpp  print.py  pybind_module.cpp  pyproject.toml  setup.py  torqueclient.cpp  torqueclient.hpp
computer_side/control/: control.cpp  control.hpp  control_full.cpp  control_full.hpp  control_interface.hpp  control_one.cpp  control_one.hpp  task_space_control.cpp  task_space_control.hpp
computer_side/ik/: drake_kinematic.cpp  drake_kinematic.hpp
computer_side/kukafri/: README.md  customlbrclient.cpp  customlbrclient.hpp  kukafricontroller.cpp
computer_side/logger/: filelogger.cpp  filelogger.hpp  ilogger.hpp  jarraylogger.cpp  jarraylogger.hpp  logger.cpp
computer_side/planer/: trajectory.cpp  trajectory.hpp
computer_side/udp/: udp_server.cpp  udp_server.hpp
computer_side/udp_server/: udp_server.cpp  udp_server.hpp
manipulator_side/: KukaOutput.java  MessageListener.java  Output.java  RemoteConnection.java  RobotRemoteControl.java
